[package]
name = "struargs_derive"
version = "0.3.0"
edition = "2024"

authors = ["Ykong <yk0n9@outlook.com>"]
license = "MIT"

description = "A macro that converts a structure into a Command parameter list"
keywords = ["string", "macros", "proc-macros", "args"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = "https://docs.rs/struargs"
repository = "https://github.com/yk0n9/struargs"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
